# EU5Miner

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  RENAMING.md  ROADMAP.md  SECURITY.md  SUPPORT.md  __main__.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  agents-instructions.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
.serena/: project.yml
.serena/memories/: project_overview.md  style_and_conventions.md  suggested_commands.md  task_completion.md
documents/: agent-resume-guide.md  architecture.md  data-type-roadmap.md  development-environment.md  feature-plan.md  mcp-server-design.md  research-findings.md  specification.md  supported-formats.md  testing-strategy.md  v1-release-readiness.md  v1-scope.md
documents/core/: README.md  library-integration-pass.md  repo-topology-and-scaffolding.md  v1-stabilization-pass.md  validation-expansion.md
documents/gui/: eu5miner-gui-foundation.md
documents/mcp/: eu5miner-mcp-foundation.md
documents/specs/: README.md  eu5miner-gui-foundation.md  eu5miner-mcp-foundation.md  library-integration-pass.md  repo-topology-and-scaffolding.md  v1-stabilization-pass.md  validation-expansion.md
scripts/: setup-centralized-uv.ps1
src/eu5miner/: __init__.py  __main__.py  cli.py  cli_reports.py  inspection.py  mods.py  paths.py  source.py  testing.py  vfs.py
tests/: conftest.py  integration_support.py  test_attribute_columns.py  test_broad_validation.py  test_building_categories.py  test_building_types.py  test_casus_belli.py  test_character_interactions.py  test_cli.py  test_cli_contract.py  test_cli_mod_workflow_contract.py  test_country_description_categories.py  test_country_interactions.py  test_cst.py  test_cultures.py  test_diplomacy.py  test_disasters.py  test_employment_systems.py  test_estate_privileges.py  test_estates.py  test_events.py  test_frontend_content.py  test_generic_actions.py  test_goods.py  test_goods_demand_categories.py  test_goods_demands.py  test_government.py  test_government_reforms.py  test_government_types.py  test_grouped_package_api.py  test_gui.py  test_holy_site_types.py  test_holy_sites.py  test_inspection.py  test_inspection_contract.py  test_install_discovery.py  test_institutions.py  test_laws.py  test_localization.py  test_localization_bundles.py  (+48 more)
tests/diplomacy/: test_casus_belli.py  test_character_interactions.py  test_country_interactions.py  test_diplomacy.py  test_generic_actions.py  test_peace_treaties.py  test_subject_types.py  test_war.py  test_wargoals.py
tests/economy/: test_employment_systems.py  test_goods.py  test_goods_demand_categories.py  test_goods_demands.py  test_markets.py  test_prices.py  test_production_methods.py
tests/government/: test_estate_privileges.py  test_estates.py  test_government.py  test_government_reforms.py  test_government_types.py  test_laws.py  test_parliament_agendas.py  test_parliament_issues.py  test_parliament_types.py
tests/localization/: test_localization_bundles.py  test_localization_helpers.py
tests/map/: test_location_setup_links.py  test_map_csv_helpers.py  test_map_text.py  test_setup_countries.py
tests/religion/: test_holy_site_types.py  test_holy_sites.py  test_religion.py  test_religions.py  test_religious_aspects.py  test_religious_factions.py  test_religious_figures.py  (+2 more)
(+131 files in other folders)
